kuber-homeworks/3.3/files/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: hashicorp/http-echo:alpine
        ports:
          - containerPort: 5678
        args:
          - -text="Hello World! It's FRONTEND"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: hashicorp/http-echo:alpine
        ports:
          - containerPort: 5678
        args:
          - -text="Hello World! It's BACKEND"
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cache-deployment
  namespace: app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cache
  template:
    metadata:
      labels:
        app: cache
    spec:
      containers:
      - name: cache
        image: hashicorp/http-echo:alpine
        ports:
          - containerPort: 5678
        args:
          - -text="Hello World! It's CACHE"
