kuber-homeworks/3.3/files/DenyAllOtherPolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: deny-all-policy
  namespace: app
spec:
  podSelector: {}
  ingress: []
